# shift

./: .gitignore  .pre-commit-config.yaml  pyproject.toml  run-all.py  test.py  tox.ini
.github/workflows/: python-package.yml
.tmp/: run-all.py
.tmp/scheduler/: constraints.py  distribution.py  models.py  optimizers.py  results.py  utils.py
shift/domain/: base.py  day.py  employee.py  model.py  planning.py  preference.py  repeat.py  schedule.py  shift.py  shifts.py  typing.py  worker.py
shift/domain/employee/: employee.py  specifications.py
shift/domain/planning/: __init__.py  constraint.py  constraints.py  distribution.py  distributions.py  optimization.py  optimizers.py  planning.py
shift/domain/shifts/: days.py  periods.py  shift.py
shift/domain/solver/: __init__.py  optimizers.py  solver.py
shift/domain/utils/: model.py  utils.py
shift/services/scheduler/: constraints.py  distribution.py  models.py  optimizers.py  results.py  utils.py
tests/: conftest.py
tests/domain/employee/: test_employee.py  test_specifications.py
tests/domain/planning/: test_constraints.py  test_distribution.py
tests/domain/shift/: test_days.py  test_period.py  test_shift.py
tests/domain/solver/: test_optimizers.py  test_solver.py
tests/domain/utils/: test_model.py
