[tool.poetry]
name = "shift"
version = "0.1.0"
description = ""
authors = ["Huub Hoofs <huubhoofs@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
ortools = "^9.8.3296"
sqlalchemy = "^2.0.23"
holidays = "^0.37"


[tool.poetry.group.test.dependencies]
pytest = "^7.4.3"
mypy = "^1.7.0"


[tool.poetry.group.dev.dependencies]
ruff = "^0.1.13"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
# Allow lines to be as long as 120.
line-length = 79